Sales Path: Correct complete stage background colour contrast

--- a/ui/components/process/flavors/sales-path-coach/_index.scss
+++ b/ui/components/process/flavors/sales-path-coach/_index.scss
@@ -30,6 +30,11 @@
       transform: rotateX(180deg);
     }
 
+    .slds-tabs_path__link,
+    .slds-tabs--path__link {
+      color: $color-text-action-label-active;
+    }
+
     &:hover {
       background-color: $color-background-path-complete-hover;
 
@@ -41,6 +46,11 @@
       .slds-tabs_path__title,
       .slds-tabs--path__title {
         transform: rotateX(0deg);
+      }
+
+      .slds-tabs_path__link,
+      .slds-tabs--path__link {
+        color: $color-text-inverse;
       }
     }
   }
@@ -80,7 +90,6 @@
   }
 
   .slds-is-current,
-  .slds-is-complete,
   .slds-is-lost {
 
     .slds-tabs_path__link,
